--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": ["next/core-web-vitals", "standard"]
+  "extends": ["next/core-web-vitals", "standard"],
+  "rules": {
+    "@next/next/no-img-element": "off",
+    "comma-dangle": [
+      "error",
+      "always-multiline"
+    ]
+  }
 }
